Fixed protected get for comment periods
