# api/swagger/swagger.yaml
@@ -3898,16 +3898,11 @@ paths:
         - in: query
           name: project
           description: "CommentPeriods relating to a particular Project(s)"
-          type: array
+          type: string  
           required: false
           collectionFormat: pipes
           items:
             type: string
-        - in: query
-          name: isDeleted
-          type: boolean
-          required: false
-          description: "CommentPeriods that are deleted or not"
         - in: query
           name: fields
           description: "commentperiod fields to return."
